maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: expected class or object definition
def eviteMur(){
^Escaper:23: error: expected class or object definition
def isDirection(dir:Direction)[Boolean]{
^Escaper:32: error: expected class or object definition
def KeepHandOnSideWall(){
^Escaper:43: error: Unmatched closing brace '}' ignored here
}
^