maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle=0
  while(!estSurBiscuit()){
    if(isDirectionFree(Direction.NORTH)&&sommeAngle=0){
      avance()
    } else {}
      eviteMur()
    }
  }
  droite()
  prendBiscuit()
}
    
    
    
def eviteMur(){
  while(getDirection()!=Direction.NORTH){
    	KeepHandOnSideWall()
  }
}

def isDirection(dir:Direction)[Boolean]{
  setDirection(dir)
  if(estFaceMur()){
    return false
  } else {
    return true
  }
}

def KeepHandOnSideWall(){
  if (!estFaceMur()){
    avance()
    gauche()
    sommeAngle=sommeAngle+1
  } else{
    droite()
    sommmeAngle=sommeAngle-1
  }
}